fix logo img shift

--- a/css/template.less
+++ b/css/template.less
@@ -1041,3 +1041,9 @@ body {
   width: 100px;
   height: 100px;
 }
+
+// Fixed logo image size
+img#dw__logo {
+  width: 30px;
+  height: 30px;
+}
